Change Lang and Title

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk"> <!-- Говоримо пошуковикам на якій мові написана сторінка -->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
-		My Site!
+		Architect Dmytro Mukhorin <!-- Те що відображається на корінці сторінки в браузері -->
 	</title>
 </head>
 <body>
