Change ref to file Vodnikiv.pdf

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 	<h2>Танухаус на острові Водників в м.Києві.</h2>
-	<iframe src="https://github.com/Mukhorin/Mukhorin.github.io/blob/464063d0b60571286184a329f2807df641f71b37/Town-House%20in%20Vodnikiv%20Island.pdf"></iframe>
+	<iframe src="Mukhorin.github.io/Town-House in Vodnikiv Island.pdf"></iframe>
 </body>
 </html>
