--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 	<h2>Танухаус на острові Водників в м.Києві.</h2>
-	<iframe src="https://mukhorin.github.io/Town-House%20in%20Vodnikiv%20Island.pdf"></iframe>
+	<iframe src="https://mukhorin.github.io/Town-House%20in%20Vodnikiv%20Island.pdf#toolbar=0" width="100%" height="1000px"></iframe>
 </body>
 </html>
