Add style.css to index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<title>
 		Architect Dmytro Mukhorin <!-- Те що відображається на корінці сторінки в браузері -->
 	</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css"> <!-- Підключаю власні стилі -->
 </head>
-<body>
-	<h2>Танухаус на острові Водників в м.Києві.</h2>
-	<iframe src="https://mukhorin.github.io/Town-House%20in%20Vodnikiv%20Island.pdf#toolbar=0" width="100%" height="1000px"></iframe>
-</body>
+	<body>
+		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
+		<!--
+		<h2>Танухаус на острові Водників в м.Києві.</h2>
+		<iframe src="https://mukhorin.github.io/Town-House%20in%20Vodnikiv%20Island.pdf#toolbar=0" width="100%" height="1000px"></iframe> --> 
+	</body>
 </html>
