index.html update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>
 		Architect Dmytro Mukhorin <!-- Те що відображається на корінці сторінки в браузері -->
 	</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"> <!-- Підключаю власні стилі -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Підключаю власні стилі -->
 </head>
 	<body>
 		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
