--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>
 		Architect Dmytro Mukhorin <!-- Те що відображається на корінці сторінки в браузері -->
 	</title>
+	<link rel="stylesheet" href="css/normalize.css"> <!-- Підключаю стилі normalize -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Підключаю власні стилі -->
 </head>
 	<body>
