--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 		<!--
 		<h2>Танухаус на острові Водників в м.Києві.</h2>
 		<iframe src="https://mukhorin.github.io/Town-House%20in%20Vodnikiv%20Island.pdf#toolbar=0" width="100%" height="1000px"></iframe> --> 
+
+		<script srs="script/js.js"></script> <!-- Підключаю JavaScript-файл -->
 	</body>
 </html>
