--- a/index.html
+++ b/index.html
@@ -112,31 +112,74 @@
 
 	<body>
 		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
+		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м.Києві.</h3>
 
 		<div class="slideshow-container">
 
 	    <div class="mySlides fade">
-	      <div class="numbertext">1 / 4</div>
-	      <img src="images/Univer_01.jpg" style="width:100%">
-	      <div class="text">Caption Text</div>
+	      <div class="numbertext">1 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_01.jpg" style="width:100%">
+	      <!-- <div class="text">Caption Text</div> --> <!-- Коментуючий текст -->
 	    </div>
 
 	    <div class="mySlides fade">
-	      <div class="numbertext">2 / 4</div>
-	      <img src="images/Univer_02.jpg" style="width:100%">
-	      <div class="text">Caption Two</div>
+	      <div class="numbertext">2 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_02.jpg" style="width:100%">
 	    </div>
 
 	    <div class="mySlides fade">
-	      <div class="numbertext">3 / 4</div>
-	      <img src="images/Univer_03.jpg" style="width:100%">
-	      <div class="text">Caption Three</div>
+	      <div class="numbertext">3 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_03.jpg" style="width:100%">
 	    </div>
 
 	    <div class="mySlides fade">
-	      <div class="numbertext">4 / 4</div>
-	      <img src="images/Univer_04.jpg" style="width:100%">
-	      <div class="text">Caption Three</div>
+	      <div class="numbertext">4 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_04.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">5 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_05.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">6 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_06.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">7 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_07.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">8 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_08.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">9 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_09.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">10 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_10.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">11 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_11.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">12 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_12.jpg" style="width:100%">
+	    </div>
+
+	    <div class="mySlides fade">
+	      <div class="numbertext">13 / 13</div>
+	      <img src="images/Townhouse_Univer/Univer_13.jpg" style="width:100%">
 	    </div>
 
 	    <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -149,7 +192,16 @@
 	      <span class="dot" onclick="currentSlide(1)"></span> 
 	      <span class="dot" onclick="currentSlide(2)"></span> 
 	      <span class="dot" onclick="currentSlide(3)"></span>
-	      <span class="dot" onclick="currentSlide(4)"></span>  
+	      <span class="dot" onclick="currentSlide(4)"></span>
+	      <span class="dot" onclick="currentSlide(5)"></span>
+	      <span class="dot" onclick="currentSlide(6)"></span> 
+	      <span class="dot" onclick="currentSlide(7)"></span> 
+	      <span class="dot" onclick="currentSlide(8)"></span>
+	      <span class="dot" onclick="currentSlide(9)"></span>
+	      <span class="dot" onclick="currentSlide(10)"></span>
+	      <span class="dot" onclick="currentSlide(11)"></span>
+	      <span class="dot" onclick="currentSlide(12)"></span>
+	      <span class="dot" onclick="currentSlide(13)"></span>
 	    </div>
 
 	    <script>
