Update "index.html" - add contacts.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	        width: auto;
 	        padding: 16px;
 	        margin-top: -22px;
-	        color: white;
+	        color: lightgrey;
 	        font-weight: bold;
 	        font-size: 18px;
 	        transition: 0.6s ease;
@@ -203,6 +203,8 @@
 	      <span class="dot" onclick="currentSlide(12)"></span>
 	      <span class="dot" onclick="currentSlide(13)"></span>
 	    </div>
+
+	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38 063 855 88 54</p>
 
 	    <script>
 	      var slideIndex = 1;
