--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	        width: auto;
 	        padding: 16px;
 	        margin-top: -22px;
-	        color: lightgrey;
+	        color: grey;
 	        font-weight: bold;
 	        font-size: 18px;
 	        transition: 0.6s ease;
