--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
 	      <span class="dot" onclick="currentSlide(13)"></span>
 	    </div>
 
-	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38 063 855 88 54</p>
+	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38(063)855-88-54</p>
 
-		<script srs="script/js.js"></script> <!-- Підключаю JavaScript-файл -->
+		<script srс="script/js.js"></script> <!-- Підключаю JavaScript-файл -->
 
 	</body>
 </html>
