--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
 	      }
 	    </script>
 
-		<!-- <script srs="script/js.js"></script> --> <!-- Підключаю JavaScript-файл -->
+		<!-- <script src="script/js.js"></script> --> <!-- Підключаю JavaScript-файл -->
 	</body>
 </html>
