--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 	<body>
 		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
-		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м.Києві.</h3>
+		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м. Києві.</h3>
 
 		<div class="slideshow-container">
 
@@ -204,7 +204,7 @@
 	      <span class="dot" onclick="currentSlide(13)"></span>
 	    </div>
 
-	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38 063 855 88 54</p>
+	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38(063)855-88-54</p>
 
 	    <script>
 	      var slideIndex = 1;
