index.html - add mark "Split".

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 	<body>
 		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
-		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м. Києві.</h3>
+		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м. Києві Split.</h3>
 
 		<div class="slideshow-container">
 
