--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk"> <!-- Говоримо пошуковикам на якій мові написана сторінка -->
+
 	<head>
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
@@ -8,11 +10,14 @@
 		</title>
 		<link rel="stylesheet" href="css/normalize.css"> <!-- Підключаю стилі normalize -->
 		<link rel="stylesheet" href="css/style.css"> <!-- Підключаю власні стилі -->
+
 	</head>
 
 	<body>
-		<h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1>
-		<h3>Нижче представлено приклад моєї роботи - Проєкт клубного таунхаусу "Сади Солом'янки" в м. Києві.</h3>
+
+		<div><h1>Вітаю на сайті магістра архітектури та сертифікованого архітектора - Дмитра Мухоріна.</h1></div>
+
+		<div><h3>Нижче представлено приклад моєї роботи - Проєкт <abbr title="Будинок з невеликою кількістю квартир і власною територією, де можуть селитися однодумці, колеги чи родичі."> клубного </abbr> таунхаусу "Сади Солом'янки" в м. Києві.</h3></div>
 
 		<div class="slideshow-container">
 
@@ -107,5 +112,7 @@
 	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38(063)855-88-54</p>
 
 		<script src="script/js.js"></script> <!-- Підключаю JavaScript-файл -->
+
 	</body>
+
 </html>
