index.html - update contacts block.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
 	      <span class="dot" onclick="currentSlide(13)"></span>
 	    </div>
 
-	    <p>Контакти: mail: muhorin@ukr.net, тел./Viber/Telegram: +38(063)855-88-54</p>
+	    <p>muhorin@ukr.net, тел./Viber/Telegram: +38(063)855-88-54</p>
+
+	    <!-- <div style="background-color: red; margin: 0 auto;">
+		    <div style="float: left; background-color: grey; width: 35%; text-align: right;">muhorin@ukr.net</div>
+		    <div style="float: left; background-color: grey;">тел./Viber/Telegram: +38(063)855-88-54</div>
+	    </div> -->
 
 		<script src="script/js.js"></script> <!-- Підключаю JavaScript-файл -->
 
