index.html update <title>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>
-			Architect Dmytro Mukhorin <!-- Те що відображається на корінці сторінки в браузері -->
-		</title>
+		<title>Architect Dmytro Mukhorin</title><!-- Те що відображається на корінці сторінки в браузері -->
 		<link rel="stylesheet" href="css/normalize.css"> <!-- Підключаю стилі normalize -->
 		<link rel="stylesheet" href="css/style.css"> <!-- Підключаю власні стилі -->
 
